--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 spring.application.name=app-booking
 
 # Configuración datasource
-spring.datasource.url=jdbc:mariadb://localhost:3306/appbookingdb
+spring.datasource.url=jdbc:mariadb://localhost:3307/appbookingdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root12345
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
