--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 # Configuración JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Configuracion de clave jwt
+jwt.secret=4f82f7b1a99e4a6c8d2e5f77d9e5a4b1secretkey123456
