Funcionamiento total api registro, inicio sesion, filtros ciudad, fecha, precio y realizar reserva

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.jpa.show-sql=true
 
 # Configuracion de clave jwt
 jwt.secret=4f82f7b1a99e4a6c8d2e5f77d9e5a4b1secretkey123456
+
+# Tamaño máximo de archivo individual
+spring.servlet.multipart.max-file-size=20MB
+
+# Tamaño máximo de la request completa (si subes varios archivos)
+spring.servlet.multipart.max-request-size=20MB
