--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/appbookingdb_test?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mariadb://localhost:3307/appbookingdb_test?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root12345
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -10,5 +10,7 @@ spring.sql.init.mode=always
 server.port=8080
 
 logging.level.root=ERROR
+
+jwt.secret=MiSecretoSuperSeguro123
 
 
