Archivo http para rutas de usuario

--- a/build.gradle
+++ b/build.gradle
@@ -63,3 +63,7 @@ test {
     useJUnitPlatform()
     jvmArgs "-javaagent:${classpath.find { it.name.contains('byte-buddy-agent') }.absolutePath}"
 }
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += ['-parameters']
+}
